--- a/GL_example/1_design.ipynb
+++ b/GL_example/1_design.ipynb
@@ -107,7 +107,8 @@
    "id": "87a38665",
    "metadata": {},
    "source": [
-    "# Yoram selects filterbanks to look for tremor. \n"
+    "# Yoram selects filterbanks to look for tremor. \n",
+    "and now change something else\n"
    ]
   },
   {
