--- a/GL_example/5_clustering.ipynb
+++ b/GL_example/5_clustering.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "0a5e6bf3",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "07a95975",
    "metadata": {},
    "outputs": [],
@@ -70,18 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "f07c3d55",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load features and datetimes from file\n",
-    "with np.load(\"../example/GL_independent_components.npz\", allow_pickle=True) as data:\n",
+    "with np.load(\"../example/GL_independent_components_test_yor.npz\", allow_pickle=True) as data:\n",
     "    features = data[\"features\"]\n",
     "    times = data[\"times\"]\n",
     "\n",
     "# Load network\n",
-    "network = pickle.load(open(\"../example/scattering_network.pickle\", \"rb\"))"
+    "network = pickle.load(open(\"../example/GL_scattering_network_test_yor.pickle\", \"rb\"))"
    ]
   },
   {
@@ -109,10 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "id": "9e0f691c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<=' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/data/stor/proj/IQ_classes/scripts/seydoux_approach/yor_version/scatseisnet/GL_example/5_clustering.ipynb Cell 8\u001b[0m in \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bkennicott.ibest.uidaho.edu/data/stor/proj/IQ_classes/scripts/seydoux_approach/yor_version/scatseisnet/GL_example/5_clustering.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Perform clustering\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bkennicott.ibest.uidaho.edu/data/stor/proj/IQ_classes/scripts/seydoux_approach/yor_version/scatseisnet/GL_example/5_clustering.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m model \u001b[39m=\u001b[39m KMeans(n_clusters\u001b[39m=\u001b[39mN_CLUSTERS, n_init\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m\"\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m4\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bkennicott.ibest.uidaho.edu/data/stor/proj/IQ_classes/scripts/seydoux_approach/yor_version/scatseisnet/GL_example/5_clustering.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m model\u001b[39m.\u001b[39;49mfit(features)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bkennicott.ibest.uidaho.edu/data/stor/proj/IQ_classes/scripts/seydoux_approach/yor_version/scatseisnet/GL_example/5_clustering.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Predict cluster for each sample\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bkennicott.ibest.uidaho.edu/data/stor/proj/IQ_classes/scripts/seydoux_approach/yor_version/scatseisnet/GL_example/5_clustering.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m predictions \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(features)\n",
+      "File \u001b[0;32m/opt/anaconda/envs/scatseisnet230330_cupy/lib/python3.11/site-packages/sklearn/cluster/_kmeans.py:1376\u001b[0m, in \u001b[0;36mKMeans.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m   1342\u001b[0m \u001b[39m\"\"\"Compute k-means clustering.\u001b[39;00m\n\u001b[1;32m   1343\u001b[0m \n\u001b[1;32m   1344\u001b[0m \u001b[39mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1365\u001b[0m \u001b[39m    Fitted estimator.\u001b[39;00m\n\u001b[1;32m   1366\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1367\u001b[0m X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_data(\n\u001b[1;32m   1368\u001b[0m     X,\n\u001b[1;32m   1369\u001b[0m     accept_sparse\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcsr\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1373\u001b[0m     accept_large_sparse\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m   1374\u001b[0m )\n\u001b[0;32m-> 1376\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_check_params(X)\n\u001b[1;32m   1377\u001b[0m random_state \u001b[39m=\u001b[39m check_random_state(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrandom_state)\n\u001b[1;32m   1378\u001b[0m sample_weight \u001b[39m=\u001b[39m _check_sample_weight(sample_weight, X, dtype\u001b[39m=\u001b[39mX\u001b[39m.\u001b[39mdtype)\n",
+      "File \u001b[0;32m/opt/anaconda/envs/scatseisnet230330_cupy/lib/python3.11/site-packages/sklearn/cluster/_kmeans.py:1307\u001b[0m, in \u001b[0;36mKMeans._check_params\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m   1306\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_check_params\u001b[39m(\u001b[39mself\u001b[39m, X):\n\u001b[0;32m-> 1307\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m_check_params(X)\n\u001b[1;32m   1309\u001b[0m     \u001b[39m# algorithm\u001b[39;00m\n\u001b[1;32m   1310\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39malgorithm \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (\u001b[39m\"\u001b[39m\u001b[39mlloyd\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39melkan\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfull\u001b[39m\u001b[39m\"\u001b[39m):\n",
+      "File \u001b[0;32m/opt/anaconda/envs/scatseisnet230330_cupy/lib/python3.11/site-packages/sklearn/cluster/_kmeans.py:818\u001b[0m, in \u001b[0;36m_BaseKMeans._check_params\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    816\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_check_params\u001b[39m(\u001b[39mself\u001b[39m, X):\n\u001b[1;32m    817\u001b[0m     \u001b[39m# n_init\u001b[39;00m\n\u001b[0;32m--> 818\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mn_init \u001b[39m<\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m0\u001b[39;49m:\n\u001b[1;32m    819\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mn_init should be > 0, got \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_init\u001b[39m}\u001b[39;00m\u001b[39m instead.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    820\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_n_init \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_init\n",
+      "\u001b[0;31mTypeError\u001b[0m: '<=' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
    "source": [
     "N_CLUSTERS = 10#10\n",
     "\n",
@@ -141,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "1af97c15",
    "metadata": {},
    "outputs": [
@@ -204,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ce87bb5c",
    "metadata": {},
    "outputs": [
@@ -255,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "56043546",
    "metadata": {},
    "outputs": [
@@ -281,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "61278419",
    "metadata": {},
    "outputs": [],
@@ -329,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "fa483b1f",
    "metadata": {},
    "outputs": [
@@ -361,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "0738aa52",
    "metadata": {},
    "outputs": [
