Add output for segment_duration

--- a/GL_example/2_transformation.ipynb
+++ b/GL_example/2_transformation.ipynb
@@ -312,13 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "3f4acf7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "segment duration is 20.0 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract segment length (from any layer)\n",
     "segment_duration = network.bins / network.sampling_rate\n",
+    "print('segment duration is {} seconds'.format(segment_duration) )\n",
     "overlap = 0.5\n",
     "\n",
     "# Gather list for timestamps and segments\n",
