Print out the segment_duration

--- a/docs/source/tutorials/2_transformation.ipynb
+++ b/docs/source/tutorials/2_transformation.ipynb
@@ -6132,6 +6132,7 @@
    "source": [
     "# Extract segment length (from any layer)\n",
     "segment_duration = network.bins / network.sampling_rate\n",
+    "print('segment duration is {} seconds'.format(segment_duration) )\n",
     "overlap = 0.5\n",
     "\n",
     "# Gather list for timestamps and segments\n",
