--- a/GL_example/4_reconstruction.ipynb
+++ b/GL_example/4_reconstruction.ipynb
@@ -288,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 | packaged by conda-forge | (main, Oct 25 2022, 06:18:27) [GCC 10.4.0]"
   },
   "vscode": {
    "interpreter": {
