--- a/GL_example/2_transformation.ipynb
+++ b/GL_example/2_transformation.ipynb
@@ -397,6 +397,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "37ea0597",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tr = st[0].copy()\n",
+    "\n",
+    "timespan = 1*5*60.0 # seconds\n",
+    "\n",
+    "starttime=obspy.UTCDateTime('2018-06-05T15:00:00')\n",
+    "\n",
+    "tr.trim(starttime=starttime, endtime=starttime + timespan) # Trim data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ea656c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#%% Spectrogram with waveform too.\n",
+    "fig, ax = plt.subplots(num=3, clear=True)\n",
+    "tr.plot(fig=fig) # Plot waveform into the figure fig\n",
+    "\n",
+    "# Define and reshape axes\n",
+    "ax_spec = fig.axes[0] \n",
+    "ax_spec.set_position([.1, .1, .85, .6 ])\n",
+    "wv_spec = fig.axes[1]\n",
+    "wv_spec.set_position([.1, .8, .85, .15 ])\n",
+    "# wv_spec.set_ylim(-4000, 4000) # change these waveform axes limits to suit!\n",
+    "# freqs, power = signal.periodogram(data, fs=sample_rate, window='hanning', \n",
+    "                                  # nfft=NFFT)\n",
+    "# NFFT is the number of data points to use in calculating periodograms.\n",
+    "#   It's usually a power of 2.  Smaller numbers provide better temporal resolution\n",
+    "#   and larger numbers provide better (low frequency) spectral resolution.\n",
+    "NFFT = 2**5\n",
+    "NFFT = 2**12\n",
+    "# Calculate the spectrogram.  vmin and vmax define the power bounds of the colormap\n",
+    "ax_spec.specgram(tr.data, NFFT=NFFT, Fs=int(tr.stats.sampling_rate), Fc=None, \n",
+    "                 detrend='linear', window=None, noverlap=NFFT*.5, cmap=None, \n",
+    "                 xextent=None, pad_to=None, sides=None, scale_by_freq=True, \n",
+    "                 # mode='psd', scale=None, vmin=None, vmax=-40)\n",
+    "                 mode='psd', scale=None)#, vmin=-0, vmax=40)\n",
+    "ax_spec.set_yscale('log')\n",
+    "ax_spec.set_ylabel('Frequency [Hz]')\n",
+    "ax_spec.set_xlabel('Time [s]')\n",
+    "# ax_spec.set_ylabel('Power [dB ref. counts^2/Hz]')\n",
+    "# ax_spec.set_xlim(0, timespan)\n",
+    "ax_spec.set_ylim(0.5, 250)\n",
+    "ax_spec.set_ylim(0.5, 250)\n",
+    "# ax_spec.set_ylim(0, 4)\n",
+    "# ax_spec.grid()\n",
+    "\n",
+    "#%% Calculate the spectra of a segment of data.\n",
+    "num_welch_segs = 8\n",
+    "\n",
+    "freqs, power = signal.welch(tr.data, fs=tr.stats.sampling_rate, window='hann', \n",
+    "             nperseg=tr.stats.npts/num_welch_segs, noverlap=None, nfft=None, \n",
+    "             detrend='linear', return_onesided=True, \n",
+    "             scaling='density', axis=-1, average='mean')\n",
+    "power_db = 10 * np.log10(power) # dB\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(num=3, clear=True)\n",
+    "tr.plot(fig=fig)\n",
+    "\n",
+    "ax_spec = fig.axes[0]\n",
+    "ax_spec.set_position([.1, .1, .85, .6 ])\n",
+    "wv_spec = fig.axes[1]\n",
+    "wv_spec.set_position([.1, .8, .85, .15 ])\n",
+    "# freqs, power = signal.periodogram(data, fs=sample_rate, window='hanning', \n",
+    "                                  # nfft=NFFT)\n",
+    "ax_spec.plot(freqs, power_db)\n",
+    "ax_spec.set_xscale('log')\n",
+    "ax_spec.set_xlabel('Frequency [Hz]')\n",
+    "ax_spec.set_ylabel('Power [dB ref. counts^2/Hz]')\n",
+    "ax_spec.set_ylim(-40, 60)\n",
+    "ax_spec.grid()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8dd2be40",
    "metadata": {},
    "outputs": [
@@ -419,7 +503,7 @@
     "center_frequencies = network.banks[0].centers\n",
     "\n",
     "# Create figure and axes\n",
-    "fig, ax = plt.subplots(2, sharex=True, dpi=300)\n",
+    "fig, ax = plt.subplots(3, sharex=True, dpi=300)\n",
     "\n",
     "# Plot the waveform\n",
     "ax[0].plot(trace.times(\"matplotlib\"), trace.data, rasterized=True, lw=0.5)\n",
