--- a/GL_example/5_clustering.ipynb
+++ b/GL_example/5_clustering.ipynb
@@ -143,33 +143,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "be08c5e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1800"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# seg_duration = 20\n",
-    "# SMOOTH_TIME = 60 \n",
-    "# SMOOTH_TIME / seg_duration * 2 - 1\n",
-    "# # seg_duration * 180\n",
-    "\n",
-    "# (180)/2*20\n",
-    "# 60*30"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "1af97c15",
    "metadata": {},
@@ -187,7 +160,7 @@
    ],
    "source": [
     "SMOOTH_TIME = 60 * 30 # s ; amount of time over which to smooth the cluster-wise detection rate\n",
-    "SMOOTH_KERNEL = int(SMOOTH_TIME / seg_duration * 2 - 1) # Assume that the segments have 50% overlap\n",
+    "SMOOTH_KERNEL = int(SMOOTH_TIME / seg_duration * 2) # Assume that the segments have 50% overlap\n",
     "# SMOOTH_KERNEL = 180\n",
     "\n",
     "# Convert predictions to one-hot encoding\n",
