--- a/GL_example/5_clustering.ipynb
+++ b/GL_example/5_clustering.ipynb
@@ -157,7 +157,9 @@
     }
    ],
    "source": [
-    "SMOOTH_KERNEL = 180\n",
+    "SMOOTH_TIME = 60 * 30 # s ; amount of time over which to smooth the cluster-wise detection rate\n",
+    "SMOOTH_KERNEL = int(SMOOTH_TIME / seg_duration * 2) # Assume that the segments have 50% overlap\n",
+    "#SMOOTH_KERNEL = 180 # original line, smooths over a number of segments\n",
     "\n",
     "# Convert predictions to one-hot encoding\n",
     "one_hot = np.zeros((len(times[:-1]), N_CLUSTERS + 1))\n",
