more working w 20s version

--- a/GL_example/1_design.ipynb
+++ b/GL_example/1_design.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "ce542b9e",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "8db7a2e3",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "555369e9",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "bd7e3888",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "f1704c58",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
     "os.makedirs(dirpath_save, exist_ok=True)\n",
     "\n",
     "# Save the scattering network with Pickle\n",
-    "filepath_save = os.path.join(dirpath_save, \"GL_scattering_network.pickle\")\n",
+    "filepath_save = os.path.join(dirpath_save, \"GL_scattering_network_20s.pickle\")\n",
     "with open(filepath_save, \"wb\") as file_save:\n",
     "    pickle.dump(network, file_save, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    "
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "bb0ad5c0",
    "metadata": {},
    "outputs": [
