--- a/GL_example/1_design.ipynb
+++ b/GL_example/1_design.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "- The __scattering network__ properties are gathered into dictionaries within the `BANK` tuple, with keyword arguments passed to the `sn.wavelets.ComplexMorletBank` object:\n",
     "    - the number of `octaves` ($J$, `int`) covered by the filter banks per layer. This defines the frequency range of analysis of the input data, from the Nyquist frequency $f_N$ down to $f_N/2^J$, and should be decided according to the frequency range of interest for the task.\n",
-    "    - the `resolution` ($Q$, `int`) represents the number of wavelets for each octave, so the frequency resolution of the filterbank. This should be large for the first layer (dense) and small for the other layers (sparse), as indicated in Andén and Mallat ([2014](https://arxiv.org/abs/1304.6763)).  *This controls the number of center frequencies that span in each octave--the frequency resolution within the octave frequency range.*\n",
+    "    - the `resolution` ($Q$, `int`) represents the number of wavelets for each octave, so the frequency resolution of the filterbank. This should be large for the first layer (dense) and small for the other layers (sparse), as indicated in Andén and Mallat ([2014](https://arxiv.org/abs/1304.6763)).  *This controls the number of center frequencies that span each octave--the frequency resolution within the octave frequency range.*\n",
     "    - the `quality` factor (float) is the ratio between the center frequency of\n",
     "      every wavelet $f$ and the bandwidth $\\delta f$. Because we work with\n",
     "      constant-Q filters, this is defined from the entire filter bank. The lower\n",
@@ -92,13 +92,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segment_duration_seconds = 20.0\n",
+    "segment_duration_seconds = 1.5\n",
     "sampling_rate_hertz = 500.0\n",
     "samples_per_segment = int(segment_duration_seconds * sampling_rate_hertz)\n",
     "bank_keyword_arguments = (\n",
-    "    {\"octaves\": 4, \"resolution\": 4, \"quality\": 1},\n",
-    "    {\"octaves\": 5, \"resolution\": 2, \"quality\": 3},\n",
-    ")"
+    "    {\"octaves\": 3, \"resolution\": 6, \"quality\": 1},\n",
+    "    {\"octaves\": 4, \"resolution\": 3, \"quality\": 3},\n",
+    ")\n",
+    "\n",
+    "# segment_duration_seconds = 20\n",
+    "# sampling_rate_hertz = 500.0\n",
+    "# samples_per_segment = int(segment_duration_seconds * sampling_rate_hertz)\n",
+    "# bank_keyword_arguments = (\n",
+    "#     {\"octaves\": 4, \"resolution\": 4, \"quality\": 1},\n",
+    "#     {\"octaves\": 5, \"resolution\": 2, \"quality\": 3},\n",
+    "# )"
    ]
   },
   {
