--- a/GL_example/3_reduction.ipynb
+++ b/GL_example/3_reduction.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "# %pip install matplotlib\n",
-    "# %pip install scikit-learn"
+    "# %pip install scikit-learn\n"
    ]
   },
   {
