testing github again

--- a/GL_example/1_design.ipynb
+++ b/GL_example/1_design.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install matplotlib\n"
+    "# %pip install matplotlib\n",
+    "# testing git hub "
    ]
   },
   {
